# vella-sdk

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  VellaSdk.podspec  eslint.config.mjs  package.json  release.sh  tsconfig.build.json  tsconfig.json  ubrn.config.yaml  vella-sdk.podspec
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/vellasdk/: VellaSdkModule.kt  VellaSdkPackage.kt
cpp/: vella-sdk.cpp  vella-sdk.h
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/vellasdk/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/VellaSdkExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/VellaSdkExample.xcodeproj/: project.pbxproj
example/ios/VellaSdkExample.xcodeproj/xcshareddata/xcschemes/: VellaSdkExample.xcscheme
example/ios/VellaSdkExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx
ios/: VellaSdk.h  VellaSdk.mm
ios/VellaSDK.xcframework/: Info.plist
ios/VellaSDK.xcframework/ios-arm64-simulator/Headers/: vella_sdkFFI.h
ios/VellaSDK.xcframework/ios-arm64_x86_64-simulator/Headers/: module.modulemap
ios/swift/: vella_sdk.swift
patches/: uniffi-bindgen-react-native+0.29.0-0.patch
scripts/: postinstall.js
src/: NativeVellaSdk.ts  index.tsx  main.ts
vella-sdk/: Cargo.toml  rust-toolchain.toml
vella-sdk/src/: email.rs  lib.rs  tokenizers.rs
vella-sdk/src/schemaorg/: about_page.rs  accept_action.rs  accommodation.rs  accounting_service.rs  achieve_action.rs  action.rs  action_access_specification.rs  action_status_type.rs  activate_action.rs  add_action.rs  administrative_area.rs  adult_entertainment.rs  adult_oriented_enumeration.rs  advertiser_content_article.rs  aggregate_offer.rs  aggregate_rating.rs  agree_action.rs  airline.rs  airport.rs  alignment_object.rs  allocate_action.rs  am_radio_channel.rs  amp_story.rs  amusement_park.rs  analysis_news_article.rs  anatomical_structure.rs  anatomical_system.rs  animal_shelter.rs  answer.rs  apartment.rs  apartment_complex.rs  api_reference.rs  append_action.rs  apply_action.rs  approved_indication.rs  aquarium.rs  archive_component.rs  archive_organization.rs  arrive_action.rs  art_gallery.rs  (+869 more)
