[package]
name = "vella-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
html-escape = "0.2.13"
lol_html = "2.2.0"
mail-parser = "0.10.2"
serde = { version = "1.0.217", features = ["derive"] }
tokenizers = { version = "0.20.3", default-features = false, features = ["onig"] }
regex = { version = "1.11.1", default-features = false, features = ["std"] }
serde_json = { version = "1.0.138", default-features = false }
uniffi = "0.29.1"
scraper = "0.23.1"
rayon = "1.10.0"

[build-dependencies]
uniffi = { version = "0.28.3", features = ["build"] }

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[profile.release]
opt-level = 3          # Maximum optimization level
lto = true             # Link Time Optimization
codegen-units = 1      # Ensures whole-program optimization
strip = true           # Removes symbols for non-debug builds
