[package]
name = "vella-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
html-escape = { version = "0.2.13", default-features = false }
lol_html = { version = "2.2.0", default-features = false }
mail-parser = { version = "0.10.2", default-features = false }
serde = { version = "1.0.217", features = ["derive"] }
tokenizers = { version = "0.20.3", default-features = false, features = ["onig"] }
regex = { version = "1.11.1", default-features = false, features = ["std"] }
serde_json = { version = "1.0.138", default-features = false }
uniffi = { version = "0.29.1" }
scraper = { version = "0.23.1", default-features = false }
rayon = { version = "1.10.0" }
serde_with = { version = "3.12.0", default-features = false, features = ["macros", "alloc"] }
icalendar = "0.16.13"
chrono = { version = "0.4.41", default-features = false }

[build-dependencies]
uniffi = { version = "0.29.1", features = ["build"] }

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[profile.release]
opt-level = "z"
codegen-units = 1
strip = true
lto = true
